--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -52,131 +52,131 @@
   "contactNo": "لالاتصا رقم",
   "selectPaymentMethod": "الدفع طريقة اختار",
   "thankYouPlacingOrder": "يسعدنا تلقي طلبكم، ونتمنى لكم يوماً سعيدا",
-  "branches": "branches",
-  "cartIsEmpty": "cartIsEmpty",
-  "checkOUT": "checkOUT",
-  "categories": "categories",
-  "haveCouponCode": "haveCouponCode?",
-  "applyCoupon": "applyCoupon",
-  "enterYourCouponCode": "enterYourCouponCode",
-  "apply": "apply",
-  "couponOff": "couponOff",
-  "currency": "currency",
-  "shippingCost": "shippingCost",
-  "totalCost": "totalCost",
-  "pay": "pay",
-  "coupons": "coupons",
-  "off": "off",
-  "available": "available",
-  "notAvailable": "notAvailable",
-  "status": "status",
-  "couponCode": "couponCode",
-  "description": "description",
-  "validTill": "validTill",
-  "inquiryForm": "inquiryForm",
-  "title": "title",
-  "note": "note",
-  "submit": "submit",
-  "resetPassword": "resetPassword",
-  "emailAddressBelowResetPassword": "emailAddressBelowResetPassword",
-  "send": "send",
-  "otpVerification": "otpVerification",
-  "enterInformationBelowToResetPassword": "enterInformationBelowToResetPassword",
-  "otp": "otp",
-  "submit": "submit",
-  "category": "category",
-  "viewAll": "viewAll",
-  "featured": "featured",
-  "hotSale": "hotSale",
-  "viewed": "viewed",
-  "ourCatalog": "ourCatalog",
-  "small": "small",
-  "medium": "medium",
-  "large": "large",
-  "myOrder": "myOrder",
-  "deliveryCharges": "deliveryCharges",
-  "discountAmount": "discountAmount",
-  "grandTotal": "grandTotal",
-  "myOrders": "myOrders",
-  "orderID": "orderID: ",
-  "totalAmount": "totalAmount:",
-  "details": "details",
-  "status": "status",
-  "createdAt": "createdAt ",
-  "otpVerification": "otpVerification",
-  "emailAddressBelowToResetPassword": "emailAddressBelowToResetPassword",
-  "placeOrder": "placeOrder",
-  "address": "address",
-  "contactNumberLikeThat": "contactNumberLikeThat",
-  "paymentMethod": "paymentMethod",
-  "selectBranch": "selectBranch",
-  "note": "note",
-  "proceed": "proceed",
-  "selectCity": "selectCity",
-  "confirm": "confirm",
-  "notNow": "notNow",
-  "bookingTime": "bookingTime",
-  "creditOrDebitCard": "creditOrDebitCard",
-  "cashOnDelivery": "cashOnDelivery",
-  "pickFromBranch": "pickFromBranch",
-  "description": "description",
-  "addToCart": "addToCart",
-  "standard": "standard",
-  "availableSize": "availableSize: ",
-  "availableSizes": "availableSizes",
-  "reviews": "reviews",
-  "viewAll": "viewAll",
-  "addREVIEW": "addREVIEW",
-  "tapAStar": "tapAStar",
-  "comment": "comment",
-  "submit": "submit",
-  "similarProducts": "similarProducts",
-  "profile": "profile",
-  "save": "save",
-  "selectOption": "selectOption",
-  "camera": "camera",
-  "storage": "storage",
-  "searchYourFavouriteItem": "searchYourFavouriteItem",
-  "home": "home",
-  "search": "search",
-  "cart": "cart",
-  "notifications": "notifications",
-  "languages": "languages",
-  "logout": "logout",
-  "termsOfService": "termsOfService",
-  "orderInfo": "orderInfo",
-  "orderDate": "orderDate",
-  "paymentMethod": "paymentMethod",
-  "paymentStatus": "paymentStatus",
-  "note": "note",
-  "orderDetails": "orderDetails",
-  "product": "product",
-  "unitPrice": "unitPrice",
-  "size": "size",
-  "quantity": "quantity",
-  "total": "total",
-  "english": "english",
-  "arabic": "arabic",
-  "login": "login",
-  "cityNotSelected": "cityNotSelected",
-  "change": "change",
-  "createAccount": "createAccount",
-  "selectTime": "Select Time",
-  "unknownError": "unknownError",
-  "noInternet": "noInternet",
-  "cantServeRequest": "cantServeRequest",
-  "cantLogin": "cantLogin",
-  "cantGetProduct": "cantGetProduct",
-  "paymentProcessError": "paymentProcessError",
-  "emailEmpty":"Email should not be empty",
-  "invalidEmail": "INVALID EMAIL",
-  "passwordEmpty": "PASSWORD SHOULD NOT BE EMPTY",
-  "invalidPassword": "INVALID PASSWORD",
-  "contactEmpty": "CONTACT NUMBER EMPTY",
-  "addressEmpty": "ADDRESS SHOULD NOT BE EMPTY",
-  "nameEmpty": "NAME SHOULD NOT BE EMPTY",
-  "bookingDate": "Booking Date",
-  "bookingTime": "Booking Time",
-  "city": "city"
+  "الفروع": "branches",
+  "cartIsEmpty": "العربة فارغة",
+  "checkOUT": "تنفيذ الطلب",
+  "categories": "الأصناف",
+  "haveCouponCode": "لدي رقم قسيمة?",
+  "applyCoupon": "تطبيق القسيمة",
+  "enterYourCouponCode": "ادخل رمز قسيمة الخصم",
+  "apply": "تنفيذ",
+  "couponOff": "القسيمة مغلقة",
+  "currency": "العملة",
+  "shippingCost": "تكلفة التوصيل",
+  "totalCost": "إجمالي القيمة",
+  "pay": "دفع",
+  "coupons": "القسائم",
+  "off": "إغلاق",
+  "available": "متاح",
+  "notAvailable": "غير متاح",
+  "status": "الحالة",
+  "couponCode": "رمز القسيمة",
+  "description": "الوصف",
+  "validTill": "متاح حتى",
+  "inquiryForm": "نموذج طلب",
+  "title": "العنوان",
+  "note": "ملاحظة",
+  "submit": "إرسال",
+  "resetPassword": "إسترجاع كلمة المرور",
+  "emailAddressBelowResetPassword": "البريد الإلكتروني لاسترجاع كلمة المرور",
+  "send": "إرسل",
+  "otpVerification": "رمز التحقق لمرة واحدة",
+  "enterInformationBelowToResetPassword": "ادخل البيانات لاسترجاع كلمة المرور",
+  "otp": "رمز التحقق لمرة واحدة",
+  "submit": "إرسال",
+  "category": "الأصناف",
+  "viewAll": "مشاهدة الكل",
+  "featured": "أصناف مميزة",
+  "hotSale": "عروض مميزة",
+  "viewed": "مشاهدة",
+  "ourCatalog": "منتجاتنا",
+  "small": "صغير",
+  "medium": "وسط",
+  "large": "كبير",
+  "myOrder": "طلبي",
+  "deliveryCharges": "تكاليف التوصيل",
+  "discountAmount": "قيمة الخصم",
+  "grandTotal": "الإجمالي",
+  "myOrders": "طلباتي",
+  "orderID": "رمز الطلب: ",
+  "totalAmount": "إجمالي القيمة:",
+  "details": "التفاصيل",
+  "status": "الحالة",
+  "createdAt": "مقدم في ",
+  "otpVerification": "رمز التوثيق لمرة واحدة",
+  "البريد الإلكتروني لاسترجاع كلمة المرور": "email Address Below To Reset Password",
+  "placeOrder": "إرسل الطلب",
+  "address": "العنوان",
+  "contactNumberLikeThat": "رقم التواصل يجب أن يكون بهذه الصيغة",
+  "paymentMethod": "طريقة الدفع",
+  "selectBranch": "اختر الفرع",
+  "note": "ملاحظة",
+  "proceed": "تنفيذ",
+  "selectCity": "اختر المدينة",
+  "confirm": "تأكيد",
+  "notNow": "ليس الآن",
+  "bookingTime": "وقت الطلب",
+  "creditOrDebitCard": "بطاقة ائتمانية / بطاقة مدى",
+  "cashOnDelivery": "الدفع عند الاستلام",
+  "pickFromBranch": "الاستلام من الفرع",
+  "description": "التفاصيل",
+  "addToCart": "إضافة إلى العربة",
+  "standard": "قياسي",
+  "availableSize": "الأحجام المتوفرة: ",
+  "الأحجام المتوفرة": "available Sizes",
+  "reviews": "تقييمات",
+  "viewAll": "مشاهدة الكل",
+  "addREVIEW": "أضف تقييم",
+  "tapAStar": "اختر نجمة",
+  "comment": "تعليق",
+  "submit": "إرسال",
+  "similarProducts": "منتجات مشابهة",
+  "profile": "الملف الشخصي",
+  "save": "حفظ",
+  "selectOption": "حدد الاختيار",
+  "camera": "كاميرا",
+  "storage": "تخزين",
+  "searchYourFavouriteItem": "البحث عن الأصناف المفضلة",
+  "home": "الرئيسية",
+  "search": "بحث",
+  "cart": "العربة",
+  "notifications": "تنبيهات",
+  "languages": "اللغات",
+  "logout": "تسجيل خروج",
+  "termsOfService": "شروط الخدمة",
+  "orderInfo": "بيانات الطلب",
+  "orderDate": "تاريخ الطلب",
+  "paymentMethod": "طريقة الدفع",
+  "paymentStatus": "حالة الدفع",
+  "note": "ملاحظة",
+  "orderDetails": "تفاصيل الطلب",
+  "product": "المنتج",
+  "unitPrice": "سعر الوحدة",
+  "size": "الحجم",
+  "quantity": "الكمية",
+  "total": "إجمالي",
+  "english": "الإنجليزية",
+  "arabic": "العربية",
+  "login": "تسجيل دخول",
+  "cityNotSelected": "لم يتم تحديد المدينة",
+  "change": "تغيير",
+  "createAccount": "حساب جديد",
+  "selectTime": "اختيار الوقت",
+  "unknownError": "خطأ غير معروف",
+  "noInternet": "لايوجد اتصال بالإنترنت",
+  "cantServeRequest": "طلب خدمة",
+  "cantLogin": "لا يمكن تسجيل الدخول",
+  "cantGetProduct": "لا يمكن الحصول على المنتج",
+  "paymentProcessError": "خطأ في عملية الدفع",
+  "emailEmpty":"لا يمكن أن تكون الرسالة خالية",
+  "invalidEmail": "بريد إلكتروني غير صحيح",
+  "passwordEmpty": "كلمة المرور لا يمكن أن تكون خالية",
+  "invalidPassword": "كلمة المرور غير مقبولة",
+  "contactEmpty": "رقم التواصل خالي",
+  "addressEmpty": "العنوان لا يمكن أن يكون خالي",
+  "nameEmpty": "الإسم لا يمكن أن يكون خالي",
+  "bookingDate": "تاريخ الحجز",
+  "bookingTime": "وقت الحجز",
+  "city": "المدينة"
 }
 
