--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -5,7 +5,6 @@
   "laBoucheeIsArt": "بالنسبة لنا في لابوشيه.. الشكولاته فن راقً.. وعالم لا محدود من الخيارات",
   "ourGoal": "هدفنا الابتكار في عالم الحلويات.. في الشكل والمضمون",
   "foundedIn": "لابوشيه من أوائل الشركات المتخصصة في مجالها منذ تأسيسها عام 2012م",
-  "branches": "لدى لابوشيه أكثر من 13 فرع منتشرة في مناطق المملكة لخدمتكم",
   "skip": "تخطي",
   "signIn": "تسجيل دخول",
   "signInWithEmailPassword": "تسجيل الدخول بالبريد الإلكتروني",
@@ -52,7 +51,7 @@
   "contactNo": "لالاتصا رقم",
   "selectPaymentMethod": "الدفع طريقة اختار",
   "thankYouPlacingOrder": "يسعدنا تلقي طلبكم، ونتمنى لكم يوماً سعيدا",
-  "الفروع": "branches",
+  "branches": "الفروع",
   "cartIsEmpty": "العربة فارغة",
   "checkOUT": "تنفيذ الطلب",
   "categories": "الأصناف",
@@ -61,7 +60,7 @@
   "enterYourCouponCode": "ادخل رمز قسيمة الخصم",
   "apply": "تنفيذ",
   "couponOff": "القسيمة مغلقة",
-  "currency": "العملة",
+  "currency": "ريال",
   "shippingCost": "تكلفة التوصيل",
   "totalCost": "إجمالي القيمة",
   "pay": "دفع",
