--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -595,8 +595,8 @@
   "@paymentMethod": {
     "description": "The current language"
   },
-  "paymentStatus": "Payment Status",
-  "@paymentStatus": {
+  "orderStatus": "Order Status",
+  "@orderStatus": {
     "description": "The current language"
   },
   "note": "Note",
@@ -717,6 +717,10 @@
   },
   "city": "City",
   "@city": {
+    "description": "The current language"
+  },
+  "branchName": "Branch Name",
+  "@branchName": {
     "description": "The current language"
   }
 }
