Fixed the product review date. Fixed the localization issues in coupon.dart file. Added onTap methods for branches page. Disable the forgot password otp snack bar. Added font for arabic. Also done some work on responsiveness of code.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -722,6 +722,10 @@
   "branchName": "Branch Name",
   "@branchName": {
     "description": "The current language"
+  },
+  "noNotifications": "NO NOTIFICATIONS",
+  "@noNotifications": {
+    "description": "The current language"
   }
 }
 
